OZ-349: Custom exceptions and fix disabled tests