@@ -22,6 +22,7 @@ import static org.mockito.MockitoAnnotations.openMocks;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.ozonehis.ozone_demo_data.config.KeycloakConfig;
 import com.ozonehis.ozone_demo_data.util.SystemAvailabilityChecker;
+import jakarta.ws.rs.core.Response;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.Collections;
@@ -30,7 +31,6 @@ import java.util.Map;
 import java.util.Optional;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.ClientResource;
@@ -62,6 +62,9 @@ class KeycloakUserServiceTest {
     @InjectMocks
     private KeycloakUserService keycloakUserService;
 
+    @Mock
+    private RealmResource realmResource;
+
     private static AutoCloseable mockCloser;
 
     private static final String USERS_JSON_PATH = "keycloak/users.json";
@@ -72,6 +75,9 @@ class KeycloakUserServiceTest {
         keycloakUserService =
                 new KeycloakUserService(keycloak, keycloakConfig, new ObjectMapper(), systemAvailabilityChecker);
         keycloakUserService.setUsersJsonPath(USERS_JSON_PATH);
+
+        when(keycloakConfig.getRealm()).thenReturn("test-realm");
+        when(keycloakUserService.realmResource()).thenReturn(realmResource);
     }
 
     @AfterAll
@@ -97,20 +103,26 @@ class KeycloakUserServiceTest {
     }
 
     @Test
-    @Disabled("This test is disabled as it requires a running Keycloak instance")
     void shouldCreateUserSuccessfully() {
         UserRepresentation user = new UserRepresentation();
+        user.setId("testUserId");
         user.setUsername("testUser");
 
-        RealmResource realmResource = mock(RealmResource.class);
-        when(keycloak.realm(anyString())).thenReturn(realmResource);
-        when(realmResource.users()).thenReturn(mock(UsersResource.class));
-        when(realmResource.users().search(anyString())).thenReturn(List.of(user));
+        UsersResource usersResource = mock(UsersResource.class);
+        Response createResponse = mock(Response.class);
+
+        when(realmResource.users()).thenReturn(usersResource);
+        // Return empty list first time to indicate user doesn't exist
+        when(usersResource.search(user.getUsername()))
+                .thenReturn(Collections.emptyList())
+                .thenReturn(List.of(user));
+        when(usersResource.create(any(UserRepresentation.class))).thenReturn(createResponse);
+        when(createResponse.getStatus()).thenReturn(201);
 
         Optional<String> result = keycloakUserService.createKeycloakUser(user);
 
         assertTrue(result.isPresent());
-        verify(realmResource.users()).create(user);
+        verify(usersResource).create(user);
     }
 
     @Test
@@ -122,18 +134,15 @@ class KeycloakUserServiceTest {
         when(keycloak.realm(anyString())).thenReturn(realmResource);
         when(realmResource.users()).thenThrow(new RuntimeException("Failed to create user"));
 
-        Optional<String> result = keycloakUserService.createKeycloakUser(user);
-
-        assertTrue(result.isEmpty());
+        assertThrows(
+                RuntimeException.class, () -> keycloakUserService.createKeycloakUser(user), "Failed to create user");
     }
 
     @Test
-    @Disabled
     void shouldAssignRealmRolesSuccessfully() {
         String userId = "testUserId";
         List<String> roles = List.of("role1", "role2");
 
-        RealmResource realmResource = mock(RealmResource.class);
         UsersResource usersResource = mock(UsersResource.class);
         RolesResource rolesResource = mock(RolesResource.class);
         RoleResource roleResource = mock(RoleResource.class);
@@ -166,28 +175,40 @@ class KeycloakUserServiceTest {
     }
 
     @Test
-    @Disabled
     void shouldAssignClientRolesSuccessfully() {
         String userId = "testUserId";
-        Map<String, List<String>> clientRoles = Map.of("client1", List.of("role1", "role2"));
+        String clientId = "client1";
+        Map<String, List<String>> clientRoles = Map.of(clientId, List.of("role1", "role2"));
 
         RealmResource realmResource = mock(RealmResource.class);
+        UsersResource usersResource = mock(UsersResource.class);
+        UserResource userResource = mock(UserResource.class);
         ClientsResource clientsResource = mock(ClientsResource.class);
         ClientResource clientResource = mock(ClientResource.class);
         RolesResource rolesResource = mock(RolesResource.class);
         RoleResource roleResource = mock(RoleResource.class);
+        RoleMappingResource roleMappingResource = mock(RoleMappingResource.class);
+        RoleScopeResource roleScopeResource = mock(RoleScopeResource.class);
+
+        ClientRepresentation clientRep = new ClientRepresentation();
+        clientRep.setId("client-id-123");
+        clientRep.setClientId(clientId);
 
         when(keycloak.realm(anyString())).thenReturn(realmResource);
+        when(realmResource.users()).thenReturn(usersResource);
         when(realmResource.clients()).thenReturn(clientsResource);
-        when(clientsResource.findByClientId(anyString())).thenReturn(List.of(new ClientRepresentation()));
-        when(realmResource.clients().get(anyString())).thenReturn(clientResource);
+        when(usersResource.get(userId)).thenReturn(userResource);
+        when(userResource.roles()).thenReturn(roleMappingResource);
+        when(clientsResource.findByClientId(clientId)).thenReturn(List.of(clientRep));
+        when(clientsResource.get(clientRep.getId())).thenReturn(clientResource);
         when(clientResource.roles()).thenReturn(rolesResource);
         when(rolesResource.get(anyString())).thenReturn(roleResource);
+        when(roleResource.toRepresentation()).thenReturn(new RoleRepresentation());
+        when(roleMappingResource.clientLevel(anyString())).thenReturn(roleScopeResource);
 
         keycloakUserService.assignClientRoles(userId, clientRoles);
 
-        verify(realmResource.users().get(userId).roles().clientLevel(anyString()))
-                .add(any());
+        verify(roleScopeResource).add(any());
     }
 
     @Test
